<resources>
    <string name="COMMON_EXIT">再按一次，离开记托付</string>
    <string name="COMMON_MISSION">从此，没有糊涂账</string>
    <string name="app_name">记托付</string>
    <string name="company_name">记恩公司</string>
    <string name="help">帮助</string>
    <string name="COMMON_XZ">下载</string>
    <string name="COMMON_OK">确认</string>
    <string name="COMMON_CANCEL">取消</string>
    <string name="goQuickHelp">快速帮助</string>
    <string name="helpCenter">帮助中心</string>
    <string name="shangpinguanli">商品管理</string>
    <string name="lsxsjl">历史销售管理</string>
    <string name="storesettings">进销存设置</string>
    <string name="securitysettings">安全中心</string>
    <string name="COMMON_CLZ">处理中...</string>
    <string name="COMMON_CXZ">查询中...</string>
    <string name="COMMON_IMAGEPICKERTITLE">请选择图片</string>
    <string name="COMMON_IMAGEPICKERGALLERY">图片库</string>
    <string name="COMMON_IMAGEPICKERCAMMERA">拍照</string>
    <string name="uploader_no_image">没有找到文件</string>
    <string name="COMMON_SDCARDERROR">SD卡有异常</string>
    <string name="COMMON_SDCARDNOSPACE">SD卡没有存储空间</string>
    <string name="COMMON_USERNAME">用户名</string>
    <string name="COMMON_USERNAME_HINT">请填写用户名</string>
    <string name="COMMON_USERNAME_HINT_XDJZB">可使用小店记账宝账号登录</string>
    <string name="COMMON_PASSWORD">密码</string>
    <string name="COMMON_GOTOREGISTER">免费注册</string>
    <string name="COMMON_GOTOFORGOTPW">忘记密码</string>
    <string name="COMMON_EMAIL">邮箱</string>
    <string name="COMMON_EMAIL_HINT">请填写常用邮箱</string>
    <string name="COMMON_IKNOW">知道了</string>
    <string name="COMMON_AGAIN">请重试</string>
    <string name="COMMON_OPTIONALTXT">可选</string>
    <string name="COMMON_DELETETXT">删除</string>
    <string name="COMMON_EDITTXT">编辑</string>
    <string name="COMMON_COMPLETETXT">完成</string>
    <string name="COMMON_SEARCHTXT">搜索</string>
    <string name="COMMON_DAOTXT">到</string>
    <string name="COMMON_CHAXUNTXT">查询</string>
    <string name="COMMON_CHECKUPDATE_TITLE">检查更新</string>
    <string name="COMMON_ABOUT">关于记托付</string>
    <string name="COMMON_PINGLUN_TITLE">给个评论</string>
    <string name="COMMON_UPDAING_TXT">获取更新</string>
    <string name="COMMON_DATAASYNC_TXT">同步数据 ...</string>
    <string name="REGISTER_USERNAME_TIPS">2到20位中英文或数字</string>
    <string name="REGISTER_EMAIL_TIPS">如jituofu@qq.com</string>
    <string name="REGISTER_PASSWORD_TIPS">6到50位登录密码</string>
    <string name="REGISTER_CPASSWORD">确认密码</string>
    <string name="REGISTER_CPASSWORD_hint">请再次填写登录密码</string>
    <string name="REGISTER_CPASSWORD_TIPS">再次输入上面的登录密码</string>
    <string name="username">用户名</string>
    <string name="username_hint">请填写用户名</string>
    <string name="username_tips">2到20位中英文或数字</string>
    <string name="email">邮箱</string>
    <string name="email_hint">请填写常用邮箱</string>
    <string name="email_tips">用于找回密码的常用邮箱,如jizhangbao@qq.com</string>
    <string name="password">密码</string>
    <string name="password_tips">6到50位登录密码</string>
    <string name="cpassword">确认密码</string>
    <string name="cpassword_hint">请再次填写登录密码</string>
    <string name="cpassword_tips">再次输入上面的登录密码</string>
    <string name="forgotpw">忘记密码</string>
    <string name="goregister">免费注册</string>
    <string name="hasaccount">有账号,去登录</string>
    <string name="REGISTER_ZCZ">注册中...</string>
    <string name="COMMON_USERNAME_ERROR">用户名不正确</string>
    <string name="COMMON_EMAIL_ERROR">常用邮箱不正确</string>
    <string name="COMMON_PASSWORD_ERROR">登录密码不正确</string>
    <string name="REGISTER_CPASSWORD_INVALID">2次输入的登录密码不一样</string>
    <string name="register_success">注册成功</string>
    <string name="logout">安全退出</string>
    <string name="helpis_help_you">这条对您是否有帮助?</string>
    <string name="helpok">能够帮助到您,是我的荣幸 :-)</string>
    <string name="helpno">您的问题没有解决么？赶紧寻求快速帮助哈</string>
    <string name="helquering">获取帮助内容...</string>
    <string name="feedbackTitle">反馈问题</string>
    <string name="feedback_jy">您的宝贵建议写在这里</string>
    <string name="feedback_tjjt">提交截图</string>
    <string name="FEEDBACK_OK_BTN">提交</string>
    <string name="FEEDBACK_CONTENT_SPECIFY">亲，反馈内容不能为空</string>
    <string name="FEEDBACK_CONTENT_INVALID">亲，反馈内容太少了吧</string>
    <string name="FEEDBACK_SCREENSHOT_OVERMAX">亲，目前只能上传3张截图</string>
    <string name="FEEDBACK_SAVE2LOCAL_SUCCESS">提交成功</string>
    <string name="FEEDBACK_SAVE2LOCAL_TIKERTEXT">反馈意见提交成功</string>
    <string name="FORGOT_TITLE">忘记密码</string>
    <string name="FORGOT_GOTOSTEP2">收到校验码,继续找回</string>
    <string name="FORGOT_REGISTER_USERNAME_TIPS">您注册时的用户名</string>
    <string name="FORGOT_REGISTER_EMAIL_TIPS">您注册时的邮箱</string>
    <string name="FORGOT_TOKEN">校验码</string>
    <string name="FORGOT_TOKEN_SPECIFY">请填写校验码</string>
    <string name="FORGOT_TOKEN_INVALID">校验码不正确</string>
    <string name="FORGOT_TOKEN_TIPS">邮箱中接收到的安全校验码</string>
    <string name="FORGOT_NEW_PWD">新密码</string>
    <string name="FORGOT_ERROR">找回密码失败，请重试</string>
    <string name="ihometitle">我的小店</string>
    <string name="idatatitle">数据分析</string>
    <string name="moretitle">更多</string>
    <string name="updatepw">修改登录密码</string>
    <string name="areyousurelogout">您确认退出?</string>
    <string name="logoutting">退出...</string>
    <string name="currentpw">当前密码</string>
    <string name="newpw">新密码</string>
    <string name="UPDATEPW_AGAINTXT">再次输入</string>
    <string name="current_password_hint">请填写当前登录密码</string>
    <string name="new_password_hint">请填写新的登录密码</string>
    <string name="new_COMMON_PASSWORD_ERROR">新的登录密码不正确</string>
    <string name="cnew_password_hint">请再次填写新密码</string>
    <string name="no_camera_image">您没有拍摄图片</string>
    <string name="no_gallery_image">您没有选择图片</string>
    <string name="save_image_error">保存图片失败</string>
    <string name="SERVICE_PHONE">18657101350</string>
    <string name="SERVICE_EMAIL">service@jituofu.com</string>
    <string name="SERVICE_WEIXIN">记托付</string>
    <string name="SERVICE_QQ">253456273</string>
    <string name="SERVICE_WEIBO">记托付</string>
    <string name="LOGIN_TITLE">登 录</string>
    <string name="LOGIN_LOGINNING">正在登录...</string>
    <string name="LOGIN_PASSWORD_HINT">请填写登录密码</string>
    <string name="SPGL_TITLE">商品管理</string>
    <string name="SPGL_MENU1_TXT1">仓库管理</string>
    <string name="SPGL_MENU1_TXT2">商品分类管理</string>
    <string name="SPGL_MENU1_TXT3">新商品入库</string>
    <string name="SPFL_QUERY_LOADING">正在获取分类...</string>
    <string name="SPFL_QUERY_NODATA">没有分类数据，您可以</string>
    <string name="SPFL_QUERY_NOCHILDDATA">没有小分类数据，您可以</string>
    <string name="SPFL_QUERY_ADDTXT">添加分类</string>
    <string name="SPFL_USE_PARENT">直接使用大分类</string>
    <string name="SPFL_QUERY_ADDPARENTTXT">添加大分类</string>
    <string name="SPFL_QUERY_ADDCHILDTXT">添加小分类</string>
    <string name="SPFL_PARENT_TITLE">大分类</string>
    <string name="SPFL_PARENT_SPECIFY">请填写大分类名称</string>
    <string name="SPFL_CHILD_SPECIFY">请填写小分类名称</string>
    <string name="SPFL_PARENT_INVALID">大分类名称为大于1位小于10位的中英文或数字</string>
    <string name="SPFL_CHILD_INVALID">小分类名称为大于1位小于10位的中英文或数字</string>
    <string name="SPFL_NEWTYPE_SPECIFY">请填写新的分类名称</string>
    <string name="SPFL_NEWTYPE_INVALID">新分类名称为大于1位小于10位的中英文或数字</string>
    <string name="SPFL_NEWTYPE_EUQAL_OLDTYPE">新分类名称和旧分类名称相同</string>
    <string name="SPFL_DELETE_PARENT_TYPE1">同时删除所有小分类及商品</string>
    <string name="SPFL_DELETE_CHILD_TYPE1">同时删除该分类下的所有商品</string>
    <string name="SPFL_DELETE_PARENT_TYPE2">同时把所有小分类及商品移到</string>
    <string name="SPFL_DELETE_CHILD_TYPE2">同时把该分类下的所有商品移到</string>
    <string name="SPFL_DELETE_TYPE_MOVE_ERROR">目标分类和当前分类相同，请重新选择</string>
    <string name="SPFL_DELETE_TARGET_TYPETXT">目标分类：</string>
    <string name="SPFL_SPEARATOR"> / </string>
    <string name="SPFL_CHILD_SUBTITLE">小分类列表</string>
    <string name="BASE_LISTVIEW_HEADER_HINT_NORMAL">下拉刷新</string>
    <string name="BASE_LISTVIEW_HEADER_HINT_READY">松开后刷新数据</string>
    <string name="BASE_LISTVIEW_HEADER_HINT_LOADING">正在加载...</string>
    <string name="BASE_LISTVIEW_HEADER_HINT_LAST_TIME">上次更新时间：</string>
    <string name="BASE_LISTVIEW_FOOTER_HINT_NORMAL">加载更多</string>
    <string name="BASE_LISTVIEW_FOOTER_HINT_READY">松开后加载更多</string>
    <string name="PRODUCT_ADD_TITLE">商品入库</string>
    <string name="PRODUCT_PNAME">商品名称</string>
    <string name="PRODUCT_PPRICE">进货价</string>
    <string name="PRODUCT_PCOUNT">数量</string>
    <string name="PRODUCT_PTYPE">商品分类</string>
    <string name="PRODUCT_PTIME">入库时间</string>
    <string name="PRODUCT_PPIC">商品图片</string>
    <string name="PRODUCT_PREMARK">备注信息</string>
    <string name="PRODUCT_PNAME_HINT">请填写商品名称</string>
    <string name="PRODUCT_PNAME_ERROR">商品名称为2到15位中英文字符</string>
    <string name="PRODUCT_PPRICE_HINT">请填写进货价</string>
    <string name="PRODUCT_PPRICE_ERROR">进货价为整数或有一位小数点</string>
    <string name="PRODUCT_PCOUNT_HINT">请填写进货数量</string>
    <string name="PRODUCT_PTIME_ERROR">请填写入库时间</string>
    <string name="PRODUCT_PCOUNT_ERROR">商品数量不正确</string>
    <string name="PRODUCT_PTYPE_HINT">商品分类</string>
    <string name="PRODUCT_PTYPE_ERROR">请选择商品分类</string>
    <string name="PRODUCT_PTIME_HINT">入库时间</string>
    <string name="PRODUCT_PPIC_HINT">商品图片</string>
    <string name="PRODUCT_PREMARK_HINT">备注信息</string>
    <string name="PRODUCT_DELETEPIC">删除图片</string>
    <string name="PRODUCT_ADD_SUCCESS">入库成功</string>
    <string name="PRODUCT_ADD_SUCCESS_JXRK">继续入库</string>
    <string name="PRODUCT_ADD_SUCCESS_GOTOJZT">去记账台</string>
    <string name="PRODUCT_ADDING">入库中...</string>
    <string name="PRODUCT_DETAIL_UPDATETXT">点击更新图片</string>
    <string name="PRODUCT_DETAIL_QUERYLOADING">获取商品信息...</string>
    <string name="PRODUCT_DETAIL_UPDATINGLOADING">更新商品...</string>
    <string name="PRODUCT_DETAIL_DELETINGLOADING">删除商品...</string>
    <string name="WAREHOUSE_TITLE">仓库</string>
    <string name="WAREHOUSE_SPSS">商品搜索</string>
    <string name="WAREHOUSE_SPSS_PRODUCTNAME_SPECIFY">输入一些内容后，再尝试</string>
    <string name="WAREHOUSE_SPSS_QUERYLOADING">搜索中...</string>
    <string name="WAREHOUSE_SPSS_NODATA">没有相关商品</string>
    <string name="WAREHOUSE_NOPARENT">亲，仓库里没有商品哦，现在就</string>
    <string name="WAREHOUSE_SUBMITPRDOCT">上传商品</string>
    <string name="WAREHOUSE_QUERYPARENTDETAIL_LOADING">获取大分类详情...</string>
    <string name="WAREHOUSE_QUERYPARENTPRODUCTSLIST_LOADING">获取商品列表...</string>
    <string name="WAREHOUSE_QUERYPARENTCHILDTYPELIST_LOADING">获取小分类列表...</string>
    <string name="WAREHOUSE_QUERYPARENTDETAIL_NOCHILDTYPEDATA">没有小分类数据</string>
    <string name="WAREHOUSE_QUERYPARENTDETAIL_NODATA">当前大分类下没有商品和小分类</string>
    <string name="WAREHOUSE_JJTXT">进价</string>
    <string name="WAREHOUSE_RKSJTXT">入库时间</string>
    <string name="CASHIER_TITLE">记账台</string>
    <string name="CASHIER_HBTITLE">记账列表</string>
    <string name="CASHIER_ADD2HEBINGBTNTXT">添加到记账列表</string>
    <string name="CASHIER_JIBTNTXT">记账</string>
    <string name="CASHIER_PNAME">商品名称</string>
    <string name="CASHIER_PPRICE">进货价</string>
    <string name="CASHIER_SELLING_COUNT">销售数量</string>
    <string name="CASHIER_SELLING_PRICE">销售单价(元)</string>
    <string name="CASHIER_XJ">小计(元)</string>
    <string name="CASHIER_SELLING_REMARK">备注</string>
    <string name="CASHIER_PNAME_HINT">请填写商品名称</string>
    <string name="CASHIER_PPRICE_HINT">请填写进货价</string>
    <string name="CASHIER_SELLING_COUNT_HINT">请填写销售数量</string>
    <string name="CASHIER_SELLING_PRICE_HINT">请填写销售单价</string>
    <string name="CASHIER_SELECT_PRODUCT">选择商品</string>
    <string name="CASHIER_COUNT_ERROR">当前商品的库存小于1</string>
    <string name="CASHIER_SELLINGCOUNT_HINT">请填写销售数量</string>
    <string name="CASHIER_SELLINGCOUNT_ERROR">销售数量不正确</string>
    <string name="SALESREPORT_RETURNSALE_ONE">商品质量原因</string>
    <string name="SALESREPORT_RETURNSALE_TWO">商品需要维修</string>
    <string name="SALESREPORT_RETURNSALE_THREE">无理由退货</string>
    <string name="SALESREPORT_RETURNSALE_FOUR">其它原因</string>
    <string name="SALESREPORT_RETURNSALE_YY">退货原因</string>
    <string name="SALESREPORT_RETURNSALE_SL">退货数量</string>
    <string name="SALESREPORT_RETURNSALE_DATE">退货日期</string>
</resources>