<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/topbar2" />

    <ScrollView style="@style/container" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- 用户名 -->

                <LinearLayout style="@style/box1" >

                    <RelativeLayout style="@style/field" >

                        <TextView
                            android:id="@+id/textView1"
                            style="@style/label"
                            android:text="@string/COMMON_USERNAME" />

                        <EditText
                            android:id="@+id/username"
                            style="@style/commonEditText"
                            android:layout_toRightOf="@+id/textView1"
                            android:hint="@string/COMMON_USERNAME_HINT"
                            android:inputType="text" >
                        </EditText>
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    style="@style/field_tips"
                    android:text="@string/REGISTER_USERNAME_TIPS" />

                <!-- 邮箱 -->

                <LinearLayout style="@style/box1" >

                    <RelativeLayout style="@style/field" >

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/label"
                            android:text="@string/COMMON_EMAIL" />

                        <EditText
                            android:id="@+id/email"
                            style="@style/commonEditText"
                            android:layout_toRightOf="@+id/textView2"
                            android:hint="@string/COMMON_EMAIL_HINT"
                            android:inputType="textEmailAddress" >
                        </EditText>
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    style="@style/field_tips"
                    android:text="@string/REGISTER_EMAIL_TIPS" />

                <!-- 密码 -->

                <LinearLayout style="@style/box1" >

                    <RelativeLayout style="@style/field" >

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/label"
                            android:text="@string/COMMON_PASSWORD" />

                        <EditText
                            android:id="@+id/password"
                            style="@style/commonEditText"
                            android:layout_toRightOf="@+id/textView3"
                            android:hint="@string/LOGIN_PASSWORD_HINT"
                            android:inputType="textPassword" >
                        </EditText>
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    style="@style/field_tips"
                    android:text="@string/REGISTER_PASSWORD_TIPS" />

                <!-- 确认密码 -->

                <LinearLayout style="@style/box1" >

                    <RelativeLayout style="@style/field" >

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/label"
                            android:text="@string/REGISTER_CPASSWORD" />

                        <EditText
                            android:id="@+id/REGISTER_CPASSWORD"
                            style="@style/commonEditText"
                            android:layout_toRightOf="@+id/textView4"
                            android:hint="@string/REGISTER_CPASSWORD_hint"
                            android:inputType="text" >
                        </EditText>
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    style="@style/field_tips"
                    android:text="@string/REGISTER_CPASSWORD_TIPS" />
            </LinearLayout>

            <Button
                android:id="@+id/submitRegister"
                style="@style/primaryBtn"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/COMMON_OK" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
