<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio0"
            style="@style/radio_button"
            android:checked="true"
            android:text="@string/SALESREPORT_RETURNSALE_ONE" />

        <RadioButton
            android:id="@+id/radio1"
            style="@style/radio_button"
            android:checked="false"
            android:text="@string/SALESREPORT_RETURNSALE_TWO" />

        <RadioButton
            android:id="@+id/radio2"
            style="@style/radio_button"
            android:checked="false"
            android:text="@string/SALESREPORT_RETURNSALE_THREE" />

        <RadioButton
            android:id="@+id/radio3"
            style="@style/radio_button"
            android:checked="false"
            android:text="@string/SALESREPORT_RETURNSALE_FOUR" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_bg"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/SALESREPORT_RETURNSALE_YY" />

        <EditText
            android:id="@+id/yy"
            style="@style/commonEditText"
            android:focusable="false"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_bg" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/SALESREPORT_RETURNSALE_SL" />

        <EditText
            android:id="@+id/sl"
            style="@style/commonEditText"
            android:focusable="false"
            android:inputType="number|numberDecimal" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_bg" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/PRODUCT_PREMARK" />

        <EditText
            android:id="@+id/remark"
            style="@style/commonEditText"
            android:focusable="false"
            android:inputType="text" >
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_bg" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/SALESREPORT_RETURNSALE_DATE" />

        <TextView
            android:id="@+id/date"
            style="@style/commonEditText"
            android:gravity="center|left" />
    </LinearLayout>

</LinearLayout>