<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/topbar2" />

    <ScrollView style="@style/container" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- 用户名 -->

                <LinearLayout
                    style="@style/field_separator"
                    android:orientation="vertical" >
                </LinearLayout>

                <RelativeLayout style="@style/field" >

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/label"
                        android:text="@string/COMMON_USERNAME" />

                    <EditText
                        android:id="@+id/username"
                        style="@style/commonEditText"
                        android:layout_toRightOf="@+id/textView1"
                        android:inputType="text" >
                    </EditText>
                </RelativeLayout>

                <LinearLayout
                    style="@style/field_separator"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    style="@style/field_tips"
                    android:text="@string/FORGOT_REGISTER_USERNAME_TIPS" />

                <!-- 邮箱 -->

                <LinearLayout
                    style="@style/field_separator"
                    android:orientation="vertical" >
                </LinearLayout>

                <RelativeLayout style="@style/field" >

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/label"
                        android:text="@string/COMMON_EMAIL" />

                    <EditText
                        android:id="@+id/email"
                        style="@style/commonEditText"
                        android:layout_toRightOf="@+id/textView2"
                        android:inputType="textEmailAddress" >
                    </EditText>
                </RelativeLayout>

                <LinearLayout
                    style="@style/field_separator"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    style="@style/field_tips"
                    android:text="@string/FORGOT_REGISTER_EMAIL_TIPS" />
            </LinearLayout>
 
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/gotostep2"
                    style="@style/link"
                    android:layout_weight="1"
                    android:text="@string/FORGOT_GOTOSTEP2" />
            </LinearLayout>
            
            <Button
                android:id="@+id/okBtn"
                style="@style/primaryBtn"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/COMMON_OK" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>